templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: f1-platform
    component: prometheus
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: f1-platform
    component: grafana
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
      name: http
